# projects

./: .gitignore  README.md
array_generator/: Cargo.toml
array_generator/src/: main.rs
calculator/: Cargo.toml
calculator/src/: main.rs
discord_bot/: README.md  start.cmd
discord_bot/src/: index.js  register-commands.js
guessing_game/src/: main.rs
hangman/: Cargo.toml  build.rs
hangman/src/: hangman.rs  main.rs  parser.rs
python black hole calculator/: README.md  main.py  utils.py
rock_paper_scissors/src/: main.rs
