[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm_cursor = "0.4.0"
press-btn-continue = "0.2.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "hangman.exe"
LegalCopyright = "Copyright DHW © 2023"
